--- a/templates/cms_page/cmsbase.html
+++ b/templates/cms_page/cmsbase.html
@@ -33,13 +33,13 @@
                     </li>
                     <!-- Posts Menu Item -->
                     <li>
-                        <a href="{{ url_for('main.post_list') }}" class="group flex items-center text-lg space-x-3 hover:bg-blue-100 py-2 px-4 rounded-md transition-colors">
+                        <a href="{{ url_for('main.detail_cuaca') }}" class="group flex items-center text-lg space-x-3 hover:bg-blue-100 py-2 px-4 rounded-md transition-colors">
                             <!-- Icon -->
                             <svg class="w-5 h-5 text-gray-500 group-hover:text-blue-600 transition-colors" fill="none" stroke="currentColor" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                                 <path d="M5 4v16h14V4H5z"></path>
                                 <path d="M5 4l7 8 7-8"></path>
                             </svg>
-                            <span>Penumpang</span>
+                            <span>Detail Cuaca</span>
                         </a>
                     </li>
                     <!-- Editor Menu Item -->
