--- a/templates/cms_page/cmsbase.html
+++ b/templates/cms_page/cmsbase.html
@@ -84,7 +84,7 @@
         <!-- Main Content -->
         <div class="flex-1 p-8 ml-64">
             <!-- Page Title Box -->
-            <div class="bg-blue-50 p-4 rounded-md mb-8 shadow-lg">
+            <div class="bg-white p-4 rounded-md mb-8 shadow-sm">
                 <h2 class="text-2xl font-semibold text-blue-800">{% block page_title %}Dashboard{% endblock %}</h2>
             </div>
 
