--- a/templates/cms_page/cmsbase.html
+++ b/templates/cms_page/cmsbase.html
@@ -51,7 +51,7 @@
                                 <path d="M3 15l7-7 7 7"></path>
                                 <path d="M9 12h6"></path>
                             </svg>
-                            <span>Editor</span>
+                            <span>User</span>
                         </a>
                     </li>
                     <!-- Settings Menu Item -->
