--- a/templates/cms_page/cmsbase.html
+++ b/templates/cms_page/cmsbase.html
@@ -44,19 +44,19 @@
                     </li>
                     <!-- Editor Menu Item -->
                     <li>
-                        <a href="{{ url_for('main.editor') }}" class="group flex items-center text-lg space-x-3 hover:bg-blue-100 py-2 px-4 rounded-md transition-colors">
+                        <a href="{{url_for('main.pengguna')}}" class="group flex items-center text-lg space-x-3 hover:bg-blue-100 py-2 px-4 rounded-md transition-colors">
                             <!-- Icon -->
                             <svg class="w-5 h-5 text-gray-500 group-hover:text-blue-600 transition-colors" fill="none" stroke="currentColor" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                                 <path d="M15 3l7 7-7 7-7-7 7-7z"></path>
                                 <path d="M3 15l7-7 7 7"></path>
                                 <path d="M9 12h6"></path>
                             </svg>
-                            <span>User</span>
+                            <span>Pengguna</span>
                         </a>
                     </li>
                     <!-- Settings Menu Item -->
                     <li>
-                        <a href="{{ url_for('main.settings') }}" class="group flex items-center text-lg space-x-3 hover:bg-blue-100 py-2 px-4 rounded-md transition-colors">
+                        <a href="" class="group flex items-center text-lg space-x-3 hover:bg-blue-100 py-2 px-4 rounded-md transition-colors">
                             <!-- Icon -->
                             <svg class="w-5 h-5 text-gray-500 group-hover:text-blue-600 transition-colors" fill="none" stroke="currentColor" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                                 <path d="M19 13l-4 4-4-4"></path>
