--- a/templates/cms_page/cmsbase.html
+++ b/templates/cms_page/cmsbase.html
@@ -23,11 +23,7 @@
                     <li>
                         <a href="{{ url_for('main.dashboard') }}" class="group flex items-center text-lg space-x-3 hover:bg-blue-100 py-2 px-4 rounded-md transition-colors">
                             <!-- Icon -->
-                            <svg class="w-5 h-5 text-gray-500 group-hover:text-blue-600 transition-colors" fill="none" stroke="currentColor" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                                <path d="M12 20h9"></path>
-                                <path d="M12 4h9"></path>
-                                <path d="M4 12h9"></path>
-                            </svg>
+                            <img src="{{ url_for('static', filename='image/asethome.svg') }}" alt="Dashboard Icon" class="w-5 h-5 object-contain group-hover:brightness-110 transition" />
                             <span>Dashboard</span>
                         </a>
                     </li>
@@ -35,10 +31,7 @@
                     <li>
                         <a href="{{ url_for('main.detail_cuaca') }}" class="group flex items-center text-lg space-x-3 hover:bg-blue-100 py-2 px-4 rounded-md transition-colors">
                             <!-- Icon -->
-                            <svg class="w-5 h-5 text-gray-500 group-hover:text-blue-600 transition-colors" fill="none" stroke="currentColor" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                                <path d="M5 4v16h14V4H5z"></path>
-                                <path d="M5 4l7 8 7-8"></path>
-                            </svg>
+                            <img src="{{ url_for('static', filename='image/asetweather.svg') }}" alt="Dashboard Icon" class="w-5 h-5 object-contain group-hover:brightness-110 transition" />
                             <span>Detail Cuaca</span>
                         </a>
                     </li>
@@ -46,11 +39,7 @@
                     <li>
                         <a href="{{url_for('main.pengguna')}}" class="group flex items-center text-lg space-x-3 hover:bg-blue-100 py-2 px-4 rounded-md transition-colors">
                             <!-- Icon -->
-                            <svg class="w-5 h-5 text-gray-500 group-hover:text-blue-600 transition-colors" fill="none" stroke="currentColor" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                                <path d="M15 3l7 7-7 7-7-7 7-7z"></path>
-                                <path d="M3 15l7-7 7 7"></path>
-                                <path d="M9 12h6"></path>
-                            </svg>
+                            <img src="{{ url_for('static', filename='image/asetuser.svg') }}" alt="Dashboard Icon" class="w-5 h-5 object-contain group-hover:brightness-110 transition" />
                             <span>Pengguna</span>
                         </a>
                     </li>
