--- a/templates/index.html
+++ b/templates/index.html
@@ -17,8 +17,8 @@
         Sistem manajemen dan pemantauan pengemudi bus. Fokus pada keselamatan, efisiensi, dan manajemen armada.
       </p>
       <a href="{{ url_for('auth.login') }}"
-        class="bg-blue-600 text-white px-5 py-2.5 rounded-lg hover:bg-blue-700 transition duration-300 shadow-md text-sm md:text-base">
-        Go to Dashboard
+        class="bg-white text-blue-800 font-semibold px-5 py-2.5 rounded-lg hover:bg-blue-700 transition duration-300 shadow-md text-sm md:text-base">
+        Download
       </a>
     </div>
 
